--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 </head>
 <body>
   <h1>佐々木大輔</h1>
-  <p>UI/UXデザイナー見習いです。</p>
+  <p>UI/UXデザイナー見習いです！ドットインストールで勉強中です！<!DOCTYPE html>
+  <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width, initial-scale=1.0">
+    <title>Document</title>
+  </head>
+  <body>
+    
+  </body>
+  </html></p>
 </body>
 </html>
